# Flow

./: .clang-format  .gitignore  CMakeLists.txt  shadertoolsconfig.json
cmake/: CopyAsset.cmake  ShaderTools.cmake
demo/: CMakeLists.txt
demo/DemoApp/: customEmitAllocCS.hlsl.h  customEmitEmit2CS.hlsl.h  customEmitEmitCS.hlsl.h  customLightingCS.hlsl.h  main.cpp  sceneSDF.cpp  sceneSimpleSmoke.cpp  traceUtils.h
demo/DemoAppD3D11/: NvFlowInteropD3D11.cpp  appD3D11Ctx.cpp  appD3D11Ctx.h  imguiPS.hlsl.h  imguiVS.hlsl.h  meshPS.hlsl.h  meshVS.hlsl.h
demo/DemoAppD3D12/: imguiPS.hlsl.h  imguiVS.hlsl.h  meshPS.hlsl.h  meshVS.hlsl.h
demo/app-shaders/: imguiPS.hlsl  shaders.cfg
demo/demo/DemoApp/: appGraphCtx.h  appGraphCtxLoaderGenerated.h  main.cpp  scene.cpp  scene2DTextureEmitter.cpp  sceneEmitSubStep.cpp  sceneFlow.cpp  sceneSimpleFlame.cpp  traceUtils.cpp
demo/demo/DemoAppCodeGen/: demoAppCodeGen.cpp
demo/demo/DemoAppD3D11/: computeContextD3D11.cpp  imguiGraphD3D11.cpp  imguiInteropD3D11.cpp  meshD3D11.cpp  meshInteropD3D11.cpp
demo/demo/DemoAppD3D12/: appD3D12Ctx.cpp  appD3D12Ctx.h
demo/demo/Shaders/: Shaders.cfg
demo/docs/dev/: shader-list.md
doc/: flow-pipeline.md  todo-list.md
docs/dev/: shader-list.md
nvflow/: CMakeLists.txt
nvflow/NvFlow/: NvFlowShader.h  blockManagerShaderParams.h  compositeShaderParams.h  crossSectionShaderParams.h  emitterAllocShaderParams.h  emitterShaderParams.h  volumeShadowShaderParams.h
nvflow/NvFlowShaders/: CMakeLists.txt  Shaders.cfg  advectCS.hlsl  advectSinglePassCS.hlsl  blockCompactCS.hlsl  blockManager1CS.hlsl  blockManager2CS.hlsl  blockManager2CS_big.hlsl  blockUnsignedDistanceCS.hlsl  clearTexture3DCS_r.hlsl  clearTexture3DCS_rgba.hlsl  clearTextureCS.hlsl  compactCS.hlsl  compositeDepthDebugPS.hlsl  compositeDepthDebugPS_LMS.hlsl  compositeDepthEstimatePS.hlsl  compositeDepthEstimatePS_LMS.hlsl  compositePS.hlsl  compositePS_LMS.hlsl  compositeSmoothPS.hlsl  compositeSmoothPS_LMS.hlsl  compositeVS.hlsl  crossSectionPS.hlsl  crossSectionVS.hlsl  crossSectionVectorPS.hlsl  crossSectionVectorVS.hlsl  densitySummaryCS.hlsl  depthDownsamplePS.hlsl  depthDownsamplePS_LMS.hlsl  depthDownsamplePS_LMS_depthMask.hlsl  depthDownsamplePS_depthMask.hlsl  depthDownsampleVS.hlsl  divergenceCS.hlsl  downsampleCS.hlsl  emitterAllocCS.hlsl  emitterDensityCS.hlsl  emitterVelocityCS.hlsl  framework.hlsli  frameworkHybrid.hlsli  gridSummaryCS.hlsl  (+65 more)
nvflow/Tools/: CMakeLists.txt  NvFlow__g_sparseShiftCS.h  RecoverHLSL.cpp  dxbc_spdb.cpp  dxbc_spdb.h
nvflow/include/nvflow/: NvFlowContext.h  NvFlowTypes.h
nvflow/shaders/: advectCS_SST.hlsl  advectSinglePassCS.hlsl  advectSinglePassCS_densityNoEmit_SST.hlsl  advectSinglePassCS_densitySimpleEmit_SST.hlsl  advectSinglePassCS_velocityNoEmit_SST.hlsl  advectSinglePassCS_velocitySimpleEmit_SST.hlsl  blockManager1CS.hlsl  blockManager2CS.hlsl  colorMapConvertCS.hlsl  combustion.hlsli  compositePS.hlsl  compositeShaderParams.h  compositeVS.hlsl  densitySummaryCoarseCS.hlsl  depthDownsamplePS.hlsl  depthDownsampleShaderParams.h  emitterAllocCS.hlsl  emitterDensityCS.hlsl  emitterFunctions.hlsli  emitterVelocityCS.hlsl  framework.hlsli  macCormackCS.hlsl  macCormackCS_densityNoEmit_SST.hlsl  macCormack_velocityNoEmit_SST.hlsl  prolongCS.hlsl  radixSort2CS.hlsl  radixSort3CS.hlsl  shaders.cfg  sparseAllocateCS.hlsl  sparseBlockListCS.hlsl  volumeRenderPS.hlsl  volumeRenderPS_colormap.hlsl  volumeRenderShaderParams.h  volumeRenderVS.hlsl  volumeShadowApplyCS.hlsl  volumeShadowApplyCS_SST.hlsl  volumeShadowStaticCS.hlsl  vorticityConfinementCS.hlsl  vorticityConfinementCS_noDensity.hlsl
nvflow/src/: Allocable.cpp  Context.cpp  ContextD3D11.cpp  ContextD3D12.cpp  NvFlowContext.cpp  NvFlowContextD3D11.cpp  NvFlowContextD3D12.cpp  Object.cpp  SparseMapping.cpp  TestVectorCached.cpp.bak  Types.cpp  VectorCached.cpp
nvflow/src/private/: Allocable.h  BlockManager.h  ClientHelper.h  Context.h  ContextD3D11.h  ContextD3D12.h  DeferredRelease.h  Emitter.h  Image3D.h  NVFlowImpl.h  NvFlowContextImpl.h  NvFlowMath.h  NvFlowObjectImpl.h  Object.h  SparseMapping.h  Types.h  VectorCached.h  VectorCachedFull.h
